tests/NormalTests/paczka1/fuzzy1/89453994.err
Error in line 9: ZD1Bw S996 46,9
Error in line 11: ZD1Bw S108 38,9
Error in line 14: S996 S162 64,1
Error in line 19: ZD1Bw S996 -1,8
Error in line 24: HGku5I S108 30,2
Error in line 34: r5ou S996 82,78
Error in line 32: r5ou S162 56,0
